tests/golden/expected/rulebook_argexpr.stdout.txt
Compile error: tests/fixtures/rulebook_argexpr.lamp:11: type error: rulebook "two" expects 1 argument(s), got 2
  11 | 	print follow two(1, 2)
    |  ^
